<resources>
    <string name="app_name">IdleIsland</string>
    <string name="no_money">You dont have enough coconuts</string>
    <string name="LogIn_button">Log In</string>
    <string name="already_bought">You already own this upgrade</string>
    <string name="upgrade_purchased">Upgrade bought</string>
    <string name="upgrade_unavailable">This upgrade is locked</string>
    <string name="Register_button">Register</string>
    <string name="Back_button">Back</string>
    <string name="message">Veiiii skilabod</string>
    <string name="Play_button">Play</string>
    <string name="Highscore_button">High Scores</string>
    <string name="Friends_button">Friends</string>
    <string name="friends_message">ADD FRIENDS</string>
    <string name="add_friend">Enter friend\'s username</string>
    <string name="add_friend_button">+</string>
    <string name="add_pending">+</string>
    <string name="ph_pending">Jósúa</string>
    <string name="ph_pending2">Þorgeir</string>
    <string name="high_scores">High Scores</string>
    <string name="high_friends">Top Friends</string>
    <string name="high_global">Top Globally</string>
    <string name="login_error_message_1">Your user name or password is incorrect! :/</string>
    <string name="login_error_message_2">No internet connection !</string>
    <string name="register_error_message_1">Username already exists</string>
    <string name="register_error_message_2">Emtpy user name or password is not allowed</string>
    <string name="gift_header">GIFT TO</string>
    <string name="radio_button1">10%</string>
    <string name="radio_button2">25%</string>
    <string name="radio_button3">50%</string>
    <string name="accept_button">Accept</string>
    <string name="reject_button">Reject</string>
    <string name="gift_button">Gift</string>
    <string name="delete_button">Delete</string>
    <string name="pending">Pending</string>
    <string name="confirm_gift">CONFIRM</string>
    <string name="pending_response1">Respond to</string>
    <string name="pending_response2">friend request</string>
    <string name="menu_text">IDLE ISLAND</string>
</resources>
