<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="68dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pending1"
            android:text="@string/pending_response1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pending_text"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor = "#FFFFFF"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pending2"
            android:text="@string/pending_response2"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor = "#FFFFFF"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_button"
            android:id="@+id/accept"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_cool"
            android:textStyle = "bold"
            android:textColor="#FFFFFF"
            android:layout_toLeftOf="@+id/centerPoint"
            android:layout_marginLeft="10dip" />

        <TextView
            android:id="@+id/centerPoint"
            android:text=""
            android:layout_width="5dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject_button"
            android:id="@+id/reject"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_cool"
            android:textStyle = "bold"
            android:textColor="#FFFFFF"
            android:layout_toRightOf="@+id/centerPoint"
            android:layout_marginRight="10dip" />

    </RelativeLayout>

</RelativeLayout>

