<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle"
    android:divider="?android:dividerHorizontal"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_scores"
        android:id="@+id/message"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:id="@+id/relativeLayout">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_friends"
            android:background="@drawable/button_cool"
            android:id="@+id/high_friends"
            android:textStyle = "bold"
            android:textColor="#FFFFFF"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/centerPoint"
            android:layout_marginLeft="10dip" />

        <TextView
            android:id="@+id/centerPoint"
            android:layout_width="5dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cool"
            android:text="@string/high_global"
            android:id="@+id/high_global"
            android:textStyle = "bold"
            android:textColor="#FFFFFF"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/centerPoint"
            android:layout_marginRight="10dip"/>


    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbarStyle="outsideOverlay"
        android:choiceMode="multipleChoice"
        android:id="@+id/listview1" />
</LinearLayout>